--- a/코딩 개념 정리공간.md
+++ b/코딩 개념 정리공간.md
@@ -16,41 +16,41 @@
 - ? 알고리즘(정리해줘 응애)
 - 기초 알고리즘 (폭넓게 쓰이는 알고리즘)
     
-    [유니온-파인드 (Union - Find) ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%B2%E1%84%82%E1%85%B5%E1%84%8B%E1%85%A9%E1%86%AB-%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AB%E1%84%83%E1%85%B3%20(Union%20-%20Find)%20859d4a3979504d759ccf3dcd27deb93b.md)
+    [유니온-파인드 (Union - Find) ](Algorithm/Fundamental/유니온-파인드 (Union - Find).md)
     
 - 최적화용 알고리즘
     
-    [투 포인터 (Two pointer)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%90%E1%85%AE%20%E1%84%91%E1%85%A9%E1%84%8B%E1%85%B5%E1%86%AB%E1%84%90%E1%85%A5%20(Two%20pointer)%205fb42efea0964f269538c2052e8b089a.md)
+    [투 포인터 (Two pointer)](Algorithm/Optimization/투 포인터 (Two pointer).md)
     
-    [누적 합 (Prefix sum)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%82%E1%85%AE%E1%84%8C%E1%85%A5%E1%86%A8%20%E1%84%92%E1%85%A1%E1%86%B8%20(Prefix%20sum)%2081f203f5928742e794d5f7de018f8282.md)
+    [누적 합 (Prefix sum)](Algorithm/Optimization/누적 합 (Prefix sum).md)
     
-    [비트마스킹 (Bitmask)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%87%E1%85%B5%E1%84%90%E1%85%B3%E1%84%86%E1%85%A1%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B5%E1%86%BC%20(Bitmask)%20a732ba90576c4fa9b80729dd7e1bc66f.md)
+    [비트마스킹 (Bitmask)](Algorithm/Optimization/비트마스킹 (Bitmask).md)
     
-    [중간에서 만나기 (Meet In the Middle) ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8C%E1%85%AE%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%E1%84%8B%E1%85%A6%E1%84%89%E1%85%A5%20%E1%84%86%E1%85%A1%E1%86%AB%E1%84%82%E1%85%A1%E1%84%80%E1%85%B5%20(Meet%20In%20the%20Middle)%20181f6ee7c3414c07a25cee4cc090799c.md)
+    [중간에서 만나기 (Meet In the Middle) ](Algorithm/Optimization/중간에서 만나기 (Meet In the Middle).md)
     
-    [백트래킹(Backtracking)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%87%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%E1%84%85%E1%85%A2%E1%84%8F%E1%85%B5%E1%86%BC(Backtracking)%20a30cc8bdb8324a209be4c9cca2934996.md)
+    [백트래킹(Backtracking)](Algorithm/Optimization/백트래킹(Backtracking).md)
     
 - 인공지능 관련 알고리즘
     
-    [MinMax 알고리즘](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/MinMax%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20f0f5f7b1b77b4a16affbf636b24c8499.md)
+    [MinMax 알고리즘](Algorithm/AI/MinMax 알고리즘.md)
     
 - Dynamic Programming 개념 및 유형
     
-    [Dynamic Programming 개념](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/Dynamic%20Programming%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20e73eb96e4121437f82b11f7e6b0bc141.md)
+    [Dynamic Programming 개념](Algorithm/Dynamic_Programming/Dynamic Programming 개념.md)
     
-    [기초 유형 - 규칙 따라 다음 칸 가기](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%80%E1%85%B5%E1%84%8E%E1%85%A9%20%E1%84%8B%E1%85%B2%E1%84%92%E1%85%A7%E1%86%BC%20-%20%E1%84%80%E1%85%B2%E1%84%8E%E1%85%B5%E1%86%A8%20%E1%84%84%E1%85%A1%E1%84%85%E1%85%A1%20%E1%84%83%E1%85%A1%E1%84%8B%E1%85%B3%E1%86%B7%20%E1%84%8F%E1%85%A1%E1%86%AB%20%E1%84%80%E1%85%A1%E1%84%80%E1%85%B5%20e321b79093e94a42a222882e9752d361.md)
+    [기초 유형 - 규칙 따라 다음 칸 가기](Algorithm/Dynamic_Programming/기초 유형 - 규칙 따라 다음 칸 가기.md)
     
-    [기본 유형: 가장 긴 공통 부분 문자열 (LIS)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%80%E1%85%B5%E1%84%87%E1%85%A9%E1%86%AB%20%E1%84%8B%E1%85%B2%E1%84%92%E1%85%A7%E1%86%BC%20%E1%84%80%E1%85%A1%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%80%E1%85%B5%E1%86%AB%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%90%E1%85%A9%E1%86%BC%20%E1%84%87%E1%85%AE%E1%84%87%E1%85%AE%E1%86%AB%20%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A1%E1%84%8B%E1%85%A7%E1%86%AF%20(LIS)%20a60c9997ff9549ecb9f11c85d41aec73.md)
+    [기본 유형: 가장 긴 공통 부분 문자열 (LIS)](Algorithm/Dynamic_Programming/기본 유형 가장 긴 공통 부분 문자열 (LIS).md)
     
-    [기본 유형: 배낭 문제 (Knapsack, 냅색)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%80%E1%85%B5%E1%84%87%E1%85%A9%E1%86%AB%20%E1%84%8B%E1%85%B2%E1%84%92%E1%85%A7%E1%86%BC%20%E1%84%87%E1%85%A2%E1%84%82%E1%85%A1%E1%86%BC%20%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A6%20(Knapsack,%20%E1%84%82%E1%85%A2%E1%86%B8%E1%84%89%E1%85%A2%E1%86%A8)%20941f6c2ee3dc441c9a47c4fdfd7c55da.md)
+    [기본 유형: 배낭 문제 (Knapsack, 냅색)](Algorithm/Dynamic_Programming/기본 유형 배낭 문제 (Knapsack, 냅색).md)
     
 
 - 정렬 알고리즘
 - 그래프 알고리즘
     
-    [그래프 탐색 - DFS / BFS](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%80%E1%85%B3%E1%84%85%E1%85%A2%E1%84%91%E1%85%B3%20%E1%84%90%E1%85%A1%E1%86%B7%E1%84%89%E1%85%A2%E1%86%A8%20-%20DFS%20BFS%20edfbba59da6247338ccb96089926a989.md)
+    [그래프 탐색 - DFS / BFS](Algorithm/Graph/그래프 탐색 - DFS BFS.md)
     
-    [BFS 변형 : no-prev BFS](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/BFS%20%E1%84%87%E1%85%A7%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%20no-prev%20BFS%206f4184e58bc34f64b4bd472b68e8eae1.md)
+    [BFS 변형 : no-prev BFS](Algorithm/Graph/BFS 변형 no-prev BFS.md)
     
     [다익스트라 (Dijkstra) 알고리즘](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%83%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%A8%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3%E1%84%85%E1%85%A1%20(Dijkstra)%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%202b11c63169d24221b3ffda4552139e1d.md)
     
