--- a/코딩 개념 정리공간.md
+++ b/코딩 개념 정리공간.md
@@ -52,65 +52,65 @@
     
     [BFS 변형 : no-prev BFS](Algorithm/Graph/BFS 변형 no-prev BFS.md)
     
-    [다익스트라 (Dijkstra) 알고리즘](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%83%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%A8%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3%E1%84%85%E1%85%A1%20(Dijkstra)%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%202b11c63169d24221b3ffda4552139e1d.md)
+    [다익스트라 (Dijkstra) 알고리즘](Algorithm/Graph/다익스트라 (Dijkstra) 알고리즘.md)
     
-    [벨만 - 포드 (Bellman - Ford - Moore) 알고리즘](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%87%E1%85%A6%E1%86%AF%E1%84%86%E1%85%A1%E1%86%AB%20-%20%E1%84%91%E1%85%A9%E1%84%83%E1%85%B3%20(Bellman%20-%20Ford%20-%20Moore)%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%20101ba57435d741c89c10a35a0fd02614.md)
+    [벨만 - 포드 (Bellman - Ford - Moore) 알고리즘](Algorithm/Graph/벨만 - 포드 (Bellman - Ford - Moore) 알고리즘.md)
     
-    [플로이드 - 워셜 (Floyd - Warshall) 알고리즘 ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%91%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A9%E1%84%8B%E1%85%B5%E1%84%83%E1%85%B3%20-%20%E1%84%8B%E1%85%AF%E1%84%89%E1%85%A7%E1%86%AF%20(Floyd%20-%20Warshall)%20%E1%84%8B%E1%85%A1%E1%86%AF%E1%84%80%E1%85%A9%E1%84%85%E1%85%B5%E1%84%8C%E1%85%B3%E1%86%B7%2029cd36ff46a94fff9d4e4cbf1504ba58.md)
+    [플로이드 - 워셜 (Floyd - Warshall) 알고리즘 ](Algorithm/Graph/플로이드 - 워셜 (Floyd - Warshall) 알고리즘.md)
     
-    [위상 정렬 (Topological Sort)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%B1%E1%84%89%E1%85%A1%E1%86%BC%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%A7%E1%86%AF%20(Topological%20Sort)%209f8c93f63600447a877aaf3d9ab38b2b.md)
+    [위상 정렬 (Topological Sort)](Algorithm/Graph/위상 정렬 (Topological Sort).md)
     
 - 탐색 알고리즘
     
-    [이분 탐색 (Binary Search)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%B5%E1%84%87%E1%85%AE%E1%86%AB%20%E1%84%90%E1%85%A1%E1%86%B7%E1%84%89%E1%85%A2%E1%86%A8%20(Binary%20Search)%20717cc66f2bd24b9c9d9fd9df9173c370.md)
+    [이분 탐색 (Binary Search)](Algorithm/Search/이분 탐색 (Binary Search).md)
     
-    [이분 탐색 응용 - 파라메트릭 서치 (Parametric Search)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%B5%E1%84%87%E1%85%AE%E1%86%AB%20%E1%84%90%E1%85%A1%E1%86%B7%E1%84%89%E1%85%A2%E1%86%A8%20%E1%84%8B%E1%85%B3%E1%86%BC%E1%84%8B%E1%85%AD%E1%86%BC%20-%20%E1%84%91%E1%85%A1%E1%84%85%E1%85%A1%E1%84%86%E1%85%A6%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%E1%86%A8%20%E1%84%89%E1%85%A5%E1%84%8E%E1%85%B5%20(Parametric%201fe93a067033481dbc991db5314d3bfe.md)
+    [이분 탐색 응용 - 파라메트릭 서치 (Parametric Search)](Algorithm/Search/이분 탐색 응용 - 파라메트릭 서치 (Parametric.md)
     
 
 # 🔍 자료 구조
 
 ---
 
-[펜윅 트리 (Fenwick Tree)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%91%E1%85%A6%E1%86%AB%E1%84%8B%E1%85%B1%E1%86%A8%20%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%20(Fenwick%20Tree)%20047ee35f823448f7b00c53b51b876cf2.md)
+[펜윅 트리 (Fenwick Tree)](Data_Structure/펜윅 트리 (Fenwick Tree).md)
 
 - 세그먼트 트리 (Segment Tree)
     
-    [세그먼트 트리 (Segment Tree) 기본편](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%89%E1%85%A6%E1%84%80%E1%85%B3%E1%84%86%E1%85%A5%E1%86%AB%E1%84%90%E1%85%B3%20%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%20(Segment%20Tree)%20%E1%84%80%E1%85%B5%E1%84%87%E1%85%A9%E1%86%AB%E1%84%91%E1%85%A7%E1%86%AB%20db099fbf576647b9b7cfaae5f3b9d14f.md)
+    [세그먼트 트리 (Segment Tree) 기본편](Data_Structure/Segment_Tree/세그먼트 트리 (Segment Tree) 기본편.md)
     
-    [Segment Tree 활용 (1) - Range update and Point query](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/Segment%20Tree%20%E1%84%92%E1%85%AA%E1%86%AF%E1%84%8B%E1%85%AD%E1%86%BC%20(1)%20-%20Range%20update%20and%20Point%20q%20117e2aa97dec48b5ad2484e156af1255.md)
+    [Segment Tree 활용 (1) - Range update and Point query](Data_Structure/Segment_Tree/Segment Tree 활용 (1) - Range update and Point q.md)
     
 - 희소 배열 (Sparse Table)
     
-    [희소 배열 (Sparse Table)](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%92%E1%85%B4%E1%84%89%E1%85%A9%20%E1%84%87%E1%85%A2%E1%84%8B%E1%85%A7%E1%86%AF%20(Sparse%20Table)%20fb6735398d9646119e43b575813172d1.md)
+    [희소 배열 (Sparse Table)](Data_Structure/Sparse_Table/희소 배열 (Sparse Table).md)
     
-    [희소 배열 응용 - LCA](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%92%E1%85%B4%E1%84%89%E1%85%A9%20%E1%84%87%E1%85%A2%E1%84%8B%E1%85%A7%E1%86%AF%20%E1%84%8B%E1%85%B3%E1%86%BC%E1%84%8B%E1%85%AD%E1%86%BC%20-%20LCA%202cf3263a050c4c12a8064d5992bab9d1.md)
+    [희소 배열 응용 - LCA](Data_Structure/Sparse_Table/희소 배열 응용 - LCA.md)
     
-    [희소 배열 응용 - 구간 내의 최솟값 / 최댓값](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%92%E1%85%B4%E1%84%89%E1%85%A9%20%E1%84%87%E1%85%A2%E1%84%8B%E1%85%A7%E1%86%AF%20%E1%84%8B%E1%85%B3%E1%86%BC%E1%84%8B%E1%85%AD%E1%86%BC%20-%20%E1%84%80%E1%85%AE%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%82%E1%85%A2%E1%84%8B%E1%85%B4%20%E1%84%8E%E1%85%AC%E1%84%89%E1%85%A9%E1%86%BA%E1%84%80%E1%85%A1%E1%86%B9%20%E1%84%8E%E1%85%AC%E1%84%83%E1%85%A2%E1%86%BA%E1%84%80%E1%85%A1%E1%86%B9%20e675a47fd9004dba97815f9e5ea84224.md)
+    [희소 배열 응용 - 구간 내의 최솟값 / 최댓값](Data_Structure/Sparse_Table/희소 배열 응용 - 구간 내의 최솟값 최댓값.md)
     
 
 # 🛠 프로그래밍 언어
 
 ---
 
-[PYTHON](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/PYTHON%202c341d210e244e779ac2c2a47cd200e7.md)
+[PYTHON](Lang/PYTHON.md)
 
-[C](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/C%20eaf7a180357b46bea323dfd2c8ae585f.md)
+[C](Lang/C.md)
 
-[JAVA](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/JAVA%205460da9774af458db03f62a5f0b50191.md)
+[JAVA](Lang/JAVA.md)
 
 ## 2024 Elice Code Challenge 문제 및 해설 (by 김혁률)
 
 ---
 
-[예선 1번. “목표량” ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%A8%E1%84%89%E1%85%A5%E1%86%AB%201%E1%84%87%E1%85%A5%E1%86%AB%20%E2%80%9C%E1%84%86%E1%85%A9%E1%86%A8%E1%84%91%E1%85%AD%E1%84%85%E1%85%A3%E1%86%BC%E2%80%9D%2069f1ebd863b649aab7b1ee79bba7677a.md)
+[예선 1번. “목표량” ](Elice/예선 1번 “목표량”.md)
 
-[예선 2번. “정리 정돈을 좋아하는 K씨”](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%A8%E1%84%89%E1%85%A5%E1%86%AB%202%E1%84%87%E1%85%A5%E1%86%AB%20%E2%80%9C%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%83%E1%85%A9%E1%86%AB%E1%84%8B%E1%85%B3%E1%86%AF%20%E1%84%8C%E1%85%A9%E1%87%82%E1%84%8B%E1%85%A1%E1%84%92%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB%20K%E1%84%8A%E1%85%B5%E2%80%9D%2053da2da78a0c4b548f95aa50cb134fb7.md)
+[예선 2번. “정리 정돈을 좋아하는 K씨”](Elice/예선 2번 “정리 정돈을 좋아하는 K씨”.md)
 
-[예선 3번. “**문자열 압축 해제”**](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%A8%E1%84%89%E1%85%A5%E1%86%AB%203%E1%84%87%E1%85%A5%E1%86%AB%20%E2%80%9C%E1%84%86%E1%85%AE%E1%86%AB%E1%84%8C%E1%85%A1%E1%84%8B%E1%85%A7%E1%86%AF%20%E1%84%8B%E1%85%A1%E1%86%B8%E1%84%8E%E1%85%AE%E1%86%A8%20%E1%84%92%E1%85%A2%E1%84%8C%E1%85%A6%E2%80%9D%2082f2767bafd641a09ce0d091aed95f27.md)
+[예선 3번. “**문자열 압축 해제”**](Elice/예선 3번 “문자열 압축 해제”.md)
 
-[예선 4번. “트리 위의 게임” ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%A8%E1%84%89%E1%85%A5%E1%86%AB%204%E1%84%87%E1%85%A5%E1%86%AB%20%E2%80%9C%E1%84%90%E1%85%B3%E1%84%85%E1%85%B5%20%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%A6%E1%84%8B%E1%85%B5%E1%86%B7%E2%80%9D%201bbc01776c514ece87bb9c1fa18bcc2a.md)
+[예선 4번. “트리 위의 게임” ](Elice/예선 4번 “트리 위의 게임”.md)
 
-[예선 5번. “수열 복원” ](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/%E1%84%8B%E1%85%A8%E1%84%89%E1%85%A5%E1%86%AB%205%E1%84%87%E1%85%A5%E1%86%AB%20%E2%80%9C%E1%84%89%E1%85%AE%E1%84%8B%E1%85%A7%E1%86%AF%20%E1%84%87%E1%85%A9%E1%86%A8%E1%84%8B%E1%85%AF%E1%86%AB%E2%80%9D%205efa52a68d3347ebb9ca96ce69c9e472.md)
+[예선 5번. “수열 복원” ](Elice/예선 5번 “수열 복원”.md)
 
 # 📂 프로젝트
 
