--- a/코딩_개념_정리공간.md
+++ b/코딩_개념_정리공간.md
@@ -16,76 +16,76 @@
 - ? 알고리즘(정리해줘 응애)
 - 기초 알고리즘 (폭넓게 쓰이는 알고리즘)
     
-    [유니온-파인드 (Union - Find) ](Algorithm/Fundamental/유니온-파인드 (Union - Find).md)
+    [유니온-파인드 (Union - Find) ](Algorithm/Fundamental/Union-Find.md)
     
 - 최적화용 알고리즘
     
-    [투 포인터 (Two pointer)](Algorithm/Optimization/투 포인터 (Two pointer).md)
+    [투 포인터 (Two pointer)](Algorithm/Optimization/Two_pointer.md)
     
-    [누적 합 (Prefix sum)](Algorithm/Optimization/누적 합 (Prefix sum).md)
+    [누적 합 (Prefix sum)](Algorithm/Optimization/Prefix_sum.md)
     
-    [비트마스킹 (Bitmask)](Algorithm/Optimization/비트마스킹 (Bitmask).md)
+    [비트마스킹 (Bitmask)](Algorithm/Optimization/Bitmask.md)
     
-    [중간에서 만나기 (Meet In the Middle) ](Algorithm/Optimization/중간에서 만나기 (Meet In the Middle).md)
+    [중간에서 만나기 (Meet In the Middle) ](Algorithm/Optimization/Meet_In_the_Middle.md)
     
     [백트래킹(Backtracking)](Algorithm/Optimization/백트래킹(Backtracking).md)
     
 - 인공지능 관련 알고리즘
     
-    [MinMax 알고리즘](Algorithm/AI/MinMax 알고리즘.md)
+    [MinMax 알고리즘](Algorithm/AI/MinMax.md)
     
 - Dynamic Programming 개념 및 유형
     
-    [Dynamic Programming 개념](Algorithm/Dynamic_Programming/Dynamic Programming 개념.md)
+    [Dynamic Programming 개념](Algorithm/Dynamic_Programming/Dynamic_Programming.md)
     
-    [기초 유형 - 규칙 따라 다음 칸 가기](Algorithm/Dynamic_Programming/기초 유형 - 규칙 따라 다음 칸 가기.md)
+    [기초 유형 - 규칙 따라 다음 칸 가기](Algorithm/Dynamic_Programming/LCS.md)
     
-    [기본 유형: 가장 긴 공통 부분 문자열 (LIS)](Algorithm/Dynamic_Programming/기본 유형 가장 긴 공통 부분 문자열 (LIS).md)
+    [기본 유형: 가장 긴 공통 부분 문자열 (LIS)](Algorithm/Dynamic_Programming/LIS.md)
     
-    [기본 유형: 배낭 문제 (Knapsack, 냅색)](Algorithm/Dynamic_Programming/기본 유형 배낭 문제 (Knapsack, 냅색).md)
+    [기본 유형: 배낭 문제 (Knapsack, 냅색)](Algorithm/Dynamic_Programming/Knapsack.md)
     
 
 - 정렬 알고리즘
 - 그래프 알고리즘
     
-    [그래프 탐색 - DFS / BFS](Algorithm/Graph/그래프 탐색 - DFS BFS.md)
+    [그래프 탐색 - DFS / BFS](Algorithm/Graph/DFS_BFS.md)
     
-    [BFS 변형 : no-prev BFS](Algorithm/Graph/BFS 변형 no-prev BFS.md)
+    [BFS 변형 : no-prev BFS](Algorithm/Graph/No-prev_BFS.md)
     
-    [다익스트라 (Dijkstra) 알고리즘](Algorithm/Graph/다익스트라 (Dijkstra) 알고리즘.md)
+    [다익스트라 (Dijkstra) 알고리즘](Algorithm/Graph/Dijkstra.md)
     
-    [벨만 - 포드 (Bellman - Ford - Moore) 알고리즘](Algorithm/Graph/벨만 - 포드 (Bellman - Ford - Moore) 알고리즘.md)
+    [벨만 - 포드 (Bellman - Ford - Moore) 알고리즘](Algorithm/Graph/Bellman-Ford-Moore.md)
     
-    [플로이드 - 워셜 (Floyd - Warshall) 알고리즘 ](Algorithm/Graph/플로이드 - 워셜 (Floyd - Warshall) 알고리즘.md)
+    [플로이드 - 워셜 (Floyd - Warshall) 알고리즘 ](Algorithm/Graph/Floyd-Warshall.md)
     
-    [위상 정렬 (Topological Sort)](Algorithm/Graph/위상 정렬 (Topological Sort).md)
+    [위상 정렬 (Topological Sort)](Algorithm/Graph/Topological_Sort.md)
     
 - 탐색 알고리즘
     
-    [이분 탐색 (Binary Search)](Algorithm/Search/이분 탐색 (Binary Search).md)
+    [이분 탐색 (Binary Search)](Algorithm/Search/Binary_Search.md)
     
-    [이분 탐색 응용 - 파라메트릭 서치 (Parametric Search)](Algorithm/Search/이분 탐색 응용 - 파라메트릭 서치 (Parametric.md)
+    [이분 탐색 응용 - 파라메트릭 서치 (Parametric Search)](Algorithm/Search/Parametric_search.md)
     
 
 # 🔍 자료 구조
 
 ---
 
-[펜윅 트리 (Fenwick Tree)](Data_Structure/펜윅 트리 (Fenwick Tree).md)
+[펜윅 트리 (Fenwick Tree)](Data_Structure/Fenwick_Tree.md)
 
 - 세그먼트 트리 (Segment Tree)
     
-    [세그먼트 트리 (Segment Tree) 기본편](Data_Structure/Segment_Tree/세그먼트 트리 (Segment Tree) 기본편.md)
+    [세그먼트 트리 (Segment Tree) 기본편](Data_Structure/Segment_Tree/Segment_Tree.md)
     
-    [Segment Tree 활용 (1) - Range update and Point query](Data_Structure/Segment_Tree/Segment Tree 활용 (1) - Range update and Point q.md)
+    [Segment Tree 활용 (1) - Range update and Point query](Data_Structure/Segment_Tree/Segment_Tree(Range_update_and_Point_q).md)
     
 - 희소 배열 (Sparse Table)
     
-    [희소 배열 (Sparse Table)](Data_Structure/Sparse_Table/희소 배열 (Sparse Table).md)
+    [희소 배열 (Sparse Table)](Data_Structure/Sparse_Table/Sparse_Table.md)
     
-    [희소 배열 응용 - LCA](Data_Structure/Sparse_Table/희소 배열 응용 - LCA.md)
+    [희소 배열 응용 - LCA](Data_Structure/Sparse_Table/LCA.md)
     
-    [희소 배열 응용 - 구간 내의 최솟값 / 최댓값](Data_Structure/Sparse_Table/희소 배열 응용 - 구간 내의 최솟값 최댓값.md)
+    [희소 배열 응용 - 구간 내의 최솟값 / 최댓값](Data_Structure/Sparse_Table/Sparse_Table_using.md)
     
 
 # 🛠 프로그래밍 언어
@@ -102,15 +102,15 @@
 
 ---
 
-[예선 1번. “목표량” ](Elice/예선 1번 “목표량”.md)
+[예선 1번. “목표량” ](Elice/예선_1번_“목표량”.md)
 
-[예선 2번. “정리 정돈을 좋아하는 K씨”](Elice/예선 2번 “정리 정돈을 좋아하는 K씨”.md)
+[예선 2번. “정리 정돈을 좋아하는 K씨”](Elice/예선_2번_“정리_정돈을_좋아하는_K씨”.md)
 
-[예선 3번. “**문자열 압축 해제”**](Elice/예선 3번 “문자열 압축 해제”.md)
+[예선 3번. “**문자열 압축 해제”**](Elice/예선_3번_“문자열_압축_해제”.md)
 
-[예선 4번. “트리 위의 게임” ](Elice/예선 4번 “트리 위의 게임”.md)
+[예선 4번. “트리 위의 게임” ](Elice/예선_4번_“트리_위의_게임”.md)
 
-[예선 5번. “수열 복원” ](Elice/예선 5번 “수열 복원”.md)
+[예선 5번. “수열 복원” ](Elice/예선_5번_“수열_복원”.md)
 
 # 📂 프로젝트
 
@@ -129,5 +129,3 @@
  - 알고리즘이랑 자료 구조 분리하기. 
 
 - [ ]  1
-
-![Untitled](%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B5%E1%86%BC%20%E1%84%80%E1%85%A2%E1%84%82%E1%85%A7%E1%86%B7%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%80%E1%85%A1%E1%86%AB%2092b6c7e8b8614423b8c7d4acb25b5ea0/Untitled.png)
